# ChangeLog for app-i18n/ispell-de
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/ispell-de/Attic/ChangeLog,v 1.1 2002/02/01 21:53:01 gbevin Exp $

*ispell-de-20001109 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about
  writing correct changelogs are explained in the skel.ChangeLog file which you
  can find in the root directory of the portage repository.