@@ -1,0 +1,37 @@
+# Copyright 1999-2002 Gentoo Technologies, Inc.
+# Distributed under the terms of the GNU General Public License, v2 or later
+# Author: Achime Gottinger <achim@gentoo.org> 
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/ispell-de/Attic/ispell-de-20011124.ebuild,v 1.1 2002/04/17 18:46:11 seemant Exp $
+
+MY_P=igerman98-${PV}
+S=${WORKDIR}/${MY_P}
+DESCRIPTION="A german dictionary for ispell"
+SRC_URI="http://lisa.goe.net/~bjacke/igerman98/dict/${MY_P}.tar.bz2"
+HOMEPAGE="http://lisa.goe.net/~bjacke/igerman98/dict"
+
+DEPEND="app-text/ispell"
+
+src_compile() {
+
+    make || die
+
+	make \
+		SQ=`pwd`/bin/sq.pl \
+		UNSQ=`pwd`/bin/unsq.pl \
+		german.hash swiss || die
+
+}
+
+src_install () {
+	
+	make \
+		DESTDIR=${D} \
+		install swiss-install || die
+	
+    insinto /usr/lib/ispell
+    doins german.aff german.hash
+ 
+    dodoc Documentation/*
+
+}
+
