@@ -1,6 +1,13 @@
 # ChangeLog for app-i18n/ispell-de
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/ispell-de/Attic/ChangeLog,v 1.1 2002/02/01 21:53:01 gbevin Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/ispell-de/Attic/ChangeLog,v 1.2 2002/04/17 18:46:11 seemant Exp $
+
+*ispell-de-20011124 (17 Apr 2002)
+
+  17 Apr 2002; Seemant Kulleen <seemant@gentoo.org> ispell-de-10011124.ebuild
+
+  Tod is soo a genius for thinking of this one.  This starts to solve our
+  recent ispell problems, hopefully.
 
 *ispell-de-20001109 (1 Feb 2002)
 
